log
Wed, Mar 26, 2025  8:26:20 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Wed, Mar 26, 2025  8:40:39 AM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7b16b15
Wed, Mar 26, 2025  8:43:49 AM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
4e39e52
Wed, Mar 26, 2025  8:46:15 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
389c3b8
Wed, Mar 26, 2025  8:48:29 AM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function 'nextList':
list.c:47:12: error: 'List' {aka 'struct List'} has no member named 'next'
   47 |     if(list->next == NULL)
      |            ^~
Compilation failed
94d1dce
Wed, Mar 26, 2025  8:51:21 AM: 
 list.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function 'nextList':
list.c:48:15: error: 'List' {aka 'struct List'} has no member named 'next'
   48 |     while(list->next != NULL)
      |               ^~
list.c:53:1: error: control reaches end of non-void function [-Werror=return-type]
   53 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
76865f6
Wed, Mar 26, 2025  8:51:37 AM: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
In file included from test.c:5:
list.c: In function 'nextList':
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
8b2c618
Wed, Mar 26, 2025  8:58:07 AM: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function 'nextList':
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
cabe413
Wed, Mar 26, 2025  8:59:10 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'nextList':
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
6f274ff
Wed, Mar 26, 2025  9:00:12 AM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function 'nextList':
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
8e1e34c
Wed, Mar 26, 2025  9:01:05 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
f3523c2
Wed, Mar 26, 2025  9:02:02 AM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
d85d090
Wed, Mar 26, 2025  9:03:10 AM: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
99d8de9
Wed, Mar 26, 2025  9:03:46 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'nextList':
list.c:51:9: error: 'return' with no value, in function returning non-void [-Werror=return-type]
   51 |         return;
      |         ^~~~~~
list.c:45:8: note: declared here
   45 | void * nextList(List * list) {
      |        ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
43a7c0d
Wed, Mar 26, 2025  9:06:45 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'nextList':
list.c:51:22: error: statement with no effect [-Werror=unused-value]
   51 |         list->current->data;
      |         ~~~~~~~~~~~~~^~~~~~
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
b8a6502
Wed, Mar 26, 2025  8:33:31 PM: 
 list.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  0|0
4aa30e8
Wed, Mar 26, 2025  8:35:10 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 25/70
b5efe3a
Wed, Mar 26, 2025  8:35:25 PM: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
4b79979
Wed, Mar 26, 2025  8:40:00 PM: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|0
9f86ebd
Wed, Mar 26, 2025  8:42:13 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
89d0f03
Wed, Mar 26, 2025  8:42:59 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
065d026
